# tp-c-cpp-homework_1

./: .gitignore  .travis.yml  README.md
HW_1/: .travis.yml  CMakeLists.txt
HW_1/include/: road_information.h
HW_1/linters/: run.sh
HW_1/project/include/: road_information.h
HW_1/project/src/: find_road_quality.c  main.c
HW_1/src/: find_road_quality.c  main.c
HW_1/tests/: main.cpp
HW_2/: CMakeLists.txt
HW_2/project/include/: types.h  utils.h
HW_2/project/include/multi/: atomic.h  multi_process_utils.h
HW_2/project/include/one/: one_proc_utils.h  utils.h
HW_2/project/src/: calculate_matrix.c  main.c  utils.c
HW_2/project/src/multi/: main.c  mult_proc_calculate_matrix.c
HW_2/project/src/one/: calculate_matrix.c  main.c
HW_2/tests/: 5  7  generate_matrix.cpp  generate_tests.sh  generator  main.cpp  size_10  size_123  size_20  size_200  size_23  size_30  size_40  size_50  size_555  size_60  size_666  test.cpp  test1  test_multi_proc.cpp  test_one_process.cpp  tests_for_valgrind.cpp
linters/: run.sh
linters/cpplint/: CPPLINT.cfg
